force-app/main/default/objects/DeclinedShipmentItem__c/DeclinedShipmentItem__c.object-meta.xml
<CustomObject>
    <label>Declined Shipment Item</label>
    <nameField>
        <displayFormat>DSI-{0000}</displayFormat>
        <label>DeclinedShipmentItem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declined Shipment Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>