force-app/main/default/objects/DeclinedShipmentItem__c/fields/DeclinedShipmentId__c.field-meta.xml
<CustomField>
    <fullName>DeclinedShipmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeclinedShipment</label>
    <referenceTo>DeclinedShipment__c</referenceTo>
    <relationshipLabel>DeclinedShipmentItems</relationshipLabel>
    <relationshipName>DeclinedShipmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>