force-app/main/default/objects/DeclinedShipmentItem__c/fields/FulfillmentOrderProductId__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order Product</label>
    <referenceTo>FulfillmentOrderLineItem</referenceTo>
    <relationshipLabel>DeclinedShipmentItems</relationshipLabel>
    <relationshipName>DeclinedShipmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>