force-app/main/default/objects/DeclinedShipmentItem__c/fields/OrderItemSummaryId__c.field-meta.xml
<CustomField>
    <fullName>OrderItemSummaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderItemSummaryId</label>
    <referenceTo>OrderItemSummary</referenceTo>
    <relationshipLabel>DeclinedShipmentItems</relationshipLabel>
    <relationshipName>DeclinedShipmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>